# yawisi

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: Simulationcourte.li
lidar_toolbox/: LiDARToolBox.py  io.py  lidar_toolbox.py
pywisim/: display.py  locations.py  parameters.py  spectrum.py  wind.py  wind_field.py
tests/: config.ini  test_locations.py  test_params.py  test_spectrum.py  test_wind.py  test_wind_field.py
tests/data/: test_from_bts.bts
wgen/: display.py  kernels.py  locations.py  parameters.py  spectrum.py  wind_field.py
yawisi/: display.py  io.py  kernels.py  locations.py  parameters.py  spectrum.py  wind.py  wind_field.py
